--- a/InitializrSpringbootProject/src/main/resources/application.properties
+++ b/InitializrSpringbootProject/src/main/resources/application.properties
@@ -1,20 +1,7 @@
 server.contextPath=/CRUD
-
 spring.jpa.hibernate.ddl-auto=update
-
-#Url donde esta el servicio de tu mysql y el nombre de la base de datos
-
 spring.datasource.url=jdbc:mysql://localhost:3306/crud
-
-#Usuario y contrasena para tu base de datos descrita en la linea anterior
-
-spring.datasource.username=root
+sring.datasource.username=root
 spring.datasource.password=
-
-#Indica el driver/lib para conectar java a mysql
-
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-
-#[opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
-
 spring.jpa.show-sql: true
